==> lordajz-cmyk/robot-control/rise_sdvp/Embedded/RC_Controller/ublox.c <==
#include "ublox.h"
#include "commands.h"
#include "utils.h"
#include "pos.h"
#include "rtcm3_simple.h"
#include "terminal.h"
#include <string.h>
#include <math.h>
#define HW_UART_DEV				UARTD6
#define HW_UBX_TX_PORT				GPIOC
#define HW_UBX_TX_PIN				6
#define HW_UBX_RX_PORT				GPIOC
#define HW_UBX_RX_PIN				7
#define HW_UBX_RESET_PORT			GPIOC
#define HW_UBX_RESET_PIN			9
#define BAUDRATE_UBX_DEFAULT			38400	// see UBX-18010854
#define BAUDRATE_UBX_DEFAULT			9600
#define BAUDRATE				115200
#define SERIAL_RX_BUFFER_SIZE			1024
#define LINE_BUFFER_SIZE			256
#define UBX_BUFFER_SIZE				3000
#define CFG_ACK_WAIT_MS				100

void ublox_init(void) {
	//Initiates the ublox. Does a lot of configuring
	palSetPadMode(HW_UBX_TX_PORT, HW_UBX_TX_PIN, PAL_MODE_ALTERNATE(8));
	palSetPadMode(HW_UBX_RX_PORT, HW_UBX_RX_PIN, PAL_MODE_ALTERNATE(8));
	palSetPadMode(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN, PAL_MODE_OUTPUT_PUSHPULL);
	
	palClearPad(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN);
	chThdSleepMilliseconds(10);
	palSetPad(HW_UBX_RESET_PORT, HW_UBX_RESET_PIN);
	chThdSleepMilliseconds(3000);

	uartStart(&HW_UART_DEV, &uart_cfg); // Start a uart driver(?)

	// Create thread (THD_FUNCTION)
	chThdCreateStatic(process_thread_wa, sizeof(process_thread_wa), NORMALPRIO, process_thread, NULL);

	// Register terminal command
	terminal_register_command_callback(
			"ubx_poll",
			"Poll one of the ubx protocol messages. Supported messages:\n"
			"  UBX_NAV_SOL - Position solution\n"
			"  UBX_NAV_RELPOSNED - Relative position to base in NED frame\n"
			"  UBX_NAV_SVIN - survey-in data\n"
			"  UBX_RXM_RAWX - raw data\n"
			"  UBX_NAV_SAT - satellite information\n"
			"  UBX_MON_VER - Ublox version information\n"
			"  UBX_CFG_GNSS - Print supported GNSS configuration",
			"[msg]",
			ubx_terminal_cmd_poll);

	// Prevent unused warnings
	(void)ubx_get_U1;
	(void)ubx_get_I1;
	(void)ubx_get_X1;
	(void)ubx_get_U2;
	(void)ubx_get_I2;
	(void)ubx_get_X2;
	(void)ubx_get_U4;
	(void)ubx_get_I4;
	(void)ubx_get_X4;
	(void)ubx_get_R4;
	(void)ubx_get_R8;

	(void)ubx_put_U1;
	(void)ubx_put_I1;
	(void)ubx_put_X1;
	(void)ubx_put_U2;
	(void)ubx_put_I2;
	(void)ubx_put_X2;
	(void)ubx_put_U4;
	(void)ubx_put_I4;
	(void)ubx_put_X4;
	(void)ubx_put_R4;
	(void)ubx_put_R8;

	chThdSleepMilliseconds(100);

	// Make sure that the baudrate is correct on unconfigured UBX.
	if (ublox_cfg_rate(200, 1, 0) == -1) {
		ubx_cfg_prt_uart uart;
		uart.baudrate = BAUDRATE;
		uart.in_ubx = true;
		uart.in_nmea = true;
		uart.in_rtcm2 = false;
		uart.in_rtcm3 = true;
		uart.out_ubx = true;
		uart.out_nmea = true;
		uart.out_rtcm3 = true;

		uartStop(&HW_UART_DEV);
		uartStart(&HW_UART_DEV, &uart_cfg_ubx_default);
		reset_decoder_state();
		ublox_cfg_prt_uart(&uart);
		uartStop(&HW_UART_DEV);
		uartStart(&HW_UART_DEV, &uart_cfg);
		ublox_cfg_rate(200, 1, 0);
	}

	// Disable survey in
	ubx_cfg_tmode3 tmode3;
	memset(&tmode3, 0, sizeof(ubx_cfg_tmode3));
	ublox_cfg_tmode3(&tmode3);

	// Switch off RTCM message output
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1005, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1074, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1077, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1084, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1087, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1094, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1097, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1124, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1127, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_1230, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_4072_0, 0);
	ublox_cfg_msg(UBX_CLASS_RTCM3, UBX_RTCM3_4072_1, 0);

	ublox_cfg_rate(200, 1, 0);

	// Also configure UART2 to 115200 and enable RTCM3 input
	ubx_cfg_prt_uart uart2;
	uart2.baudrate = 115200;
	uart2.in_ubx = true;
	uart2.in_nmea = false;
	uart2.in_rtcm2 = false;
	uart2.in_rtcm3 = true;
	uart2.out_ubx = true;
	uart2.out_nmea = false;
	uart2.out_rtcm3 = false;
	ublox_cfg_prt_uart2(&uart2);

	// Dynamic model
	ubx_cfg_nav5 nav5;
	memset(&nav5, 0, sizeof(ubx_cfg_nav5));
	nav5.apply_dyn = true;
	nav5.dyn_model = 4;
	ublox_cfg_nav5(&nav5);

	// Time pulse configuration
	ubx_cfg_tp5 tp5;
	memset(&tp5, 0, sizeof(ubx_cfg_tp5));
	tp5.active = true;
	tp5.polarity = true;
	tp5.alignToTow = true;
	tp5.lockGnssFreq = true;
	tp5.lockedOtherSet = true;
	tp5.syncMode = false;
	tp5.isFreq = false;
	tp5.isLength = true;
	tp5.freq_period = 1000000;
	tp5.pulse_len_ratio = 0;
	tp5.freq_period_lock = 1000000;
	tp5.pulse_len_ratio_lock = 100000;
	tp5.gridUtcGnss = 0;
	tp5.user_config_delay = 0;
	tp5.rf_group_delay = 0;
	tp5.ant_cable_delay = 50;
	ublox_cfg_tp5(&tp5);

	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_RELPOSNED, 1);
	ublox_cfg_msg(UBX_CLASS_RXM, UBX_RXM_RAWX, UBLOX_IS_F9P ? 0 : 1);

	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GGA, 1);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GSV, UBLOX_IS_F9P ? 0 : 1);

	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GLL, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GSA, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_RMC, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_VTG, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GRS, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GST, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_ZDA, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GBS, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_DTM, 0);

	ubx_cfg_nmea nmea;
	memset(&nmea, 0, sizeof(ubx_cfg_nmea));
	nmea.nmeaVersion = 0x41;
	nmea.numSv = 0;
	nmea.highPrec = true;

	ublox_cfg_nmea(&nmea);

#if UBLOX_IS_F9P
	unsigned char buffer[80];
	int ind = 0;
	ublox_cfg_append_enable_gps(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_gal(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_bds(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_glo(buffer, &ind, true, true, true);
	ublox_cfg_valset(buffer, ind, true, true, true);
#else
	ubx_cfg_gnss gnss;
	memset(&gnss, 0, sizeof(ubx_cfg_gnss));
	gnss.num_ch_hw = 30;
	gnss.num_ch_use = 30;
	gnss.num_blocks = 3;

	gnss.blocks[0].gnss_id = UBX_GNSS_ID_GPS;
	gnss.blocks[0].en = true;
	gnss.blocks[0].minTrkCh = 8;
	gnss.blocks[0].maxTrkCh = 16;
	gnss.blocks[0].flags = UBX_CFG_GNSS_GPS_L1C;

	gnss.blocks[1].gnss_id = UBX_GNSS_ID_GLONASS;
	gnss.blocks[1].en = true;
	gnss.blocks[1].minTrkCh = 8;
	gnss.blocks[1].maxTrkCh = 16;
	gnss.blocks[1].flags = UBX_CFG_GNSS_GLO_L1;

	gnss.blocks[2].gnss_id = UBX_GNSS_ID_BEIDOU;
	gnss.blocks[2].en = false;
	gnss.blocks[2].minTrkCh = 8;
	gnss.blocks[2].maxTrkCh = 16;
	gnss.blocks[2].flags = UBX_CFG_GNSS_BDS_B1L;

	// M8P does not support galileo
	gnss.blocks[3].gnss_id = UBX_GNSS_ID_GALILEO;
	gnss.blocks[3].en = false;
	gnss.blocks[3].minTrkCh = 8;
	gnss.blocks[3].maxTrkCh = 10;
	gnss.blocks[3].flags = UBX_CFG_GNSS_GAL_E1;

	ublox_cfg_gnss(&gnss);
#endif
}

void ublox_send(unsigned char *data, unsigned int len) {
	if (!process_tp) {
		return;
	}

	if (len > 2048) {
		len = 2048;
	}

	// Wait for the previous transmission to finish.
	while (HW_UART_DEV.txstate == UART_TX_ACTIVE) {
		chThdSleep(1);
	}

	// Copy this data to a new buffer in case the provided one is re-used
	// after this function returns.
	static uint8_t buffer[2048];
	memcpy(buffer, data, len);

	uartStartSend(&HW_UART_DEV, len, buffer);
}

static int wait_ack_nak(int timeout_ms) {
	systime_t to;
	if (timeout_ms >= 0) {
		to = MS2ST(timeout_ms);
	} else {
		to = TIME_INFINITE;
	}

	ack_wait_tp = chThdGetSelfX();
	int res = chEvtWaitAnyTimeout((eventmask_t)3, to);
	ack_wait_tp = 0;

	if (res == 1) {
		return 0;
	} else if (res == 2) {
		return 1;
	} else {
		return -1;
	}
}

static void ubx_decode_ack(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	if (ack_wait_tp) {
		chEvtSignalI(ack_wait_tp, (eventmask_t)1);
	}
}

static void ubx_decode_nak(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	if (ack_wait_tp) {
		chEvtSignalI(ack_wait_tp, (eventmask_t)2);
	}
}
