==> Koxx3/vesc_express/main/ublox.c <==
#include "ublox.h"
#include "commands.h"
#include "terminal.h"
#include "nmea.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/uart.h"
#include <string.h>
#include <math.h>
#define BAUDRATE_UBX_DEFAULT		38400	// see UBX-18010854
#define BAUDRATE_UBX_DEFAULT		9600
#define BAUDRATE					115200
#define LINE_BUFFER_SIZE			256
#define UBX_BUFFER_SIZE				3000
#define CFG_ACK_WAIT_MS				100
#define D(x) 						((double)x##L)
#define D_PI						D(3.14159265358979323846)

bool ublox_init(bool print) {
	wait_sem = xSemaphoreCreateBinary();

	uart_config_t uart_config = {
			.baud_rate = BAUDRATE,
			.data_bits = UART_DATA_8_BITS,
			.parity    = UART_PARITY_DISABLE,
			.stop_bits = UART_STOP_BITS_1,
			.flow_ctrl = UART_HW_FLOWCTRL_DISABLE,
#if IDF5			
			.source_clk = UART_SCLK_DEFAULT,
#endif			
	};

	uart_driver_install(UART_NUM, 1024, 512, 0, 0, 0);
	uart_param_config(UART_NUM, &uart_config);
	uart_set_pin(UART_NUM, UART_TX, UART_RX, -1, -1);

	xTaskCreatePinnedToCore(rx_task, "ublox_rx", 4096, NULL, 8, NULL, tskNO_AFFINITY);

	// Prevent unused warnings
	(void)ubx_get_U1;
	(void)ubx_get_I1;
	(void)ubx_get_X1;
	(void)ubx_get_U2;
	(void)ubx_get_I2;
	(void)ubx_get_X2;
	(void)ubx_get_U4;
	(void)ubx_get_I4;
	(void)ubx_get_X4;
	(void)ubx_get_R4;
	(void)ubx_get_R8;

	(void)ubx_put_U1;
	(void)ubx_put_I1;
	(void)ubx_put_X1;
	(void)ubx_put_U2;
	(void)ubx_put_I2;
	(void)ubx_put_X2;
	(void)ubx_put_U4;
	(void)ubx_put_I4;
	(void)ubx_put_X4;
	(void)ubx_put_R4;
	(void)ubx_put_R8;

	ubx_cfg_prt_uart uart;
	uart.baudrate = BAUDRATE;
	uart.in_ubx = true;
	uart.in_nmea = true;
	uart.in_rtcm2 = false;
	uart.in_rtcm3 = false;
	uart.out_ubx = true;
	uart.out_nmea = true;
	uart.out_rtcm3 = false;

	uint16_t ubx_rate = 500;

	// Up to 5 retries
	bool baud_ok = false;
	for (int i = 0;i < 5;i++) {
		// Make sure that the baudrate is correct on unconfigured UBX.
		if (ublox_cfg_rate(ubx_rate, 1, 0) == -1) {
			// Set default baudrate
			uart_config.baud_rate = BAUDRATE_UBX_DEFAULT;
			uart_param_config(UART_NUM, &uart_config);

			vTaskDelay(100 / portTICK_PERIOD_MS);
			reset_decoder_state();
			ublox_cfg_prt_uart(&uart);

			vTaskDelay(100 / portTICK_PERIOD_MS);
			reset_decoder_state();
			ublox_cfg_prt_uart(&uart);

			// Set configured baudrate
			uart_config.baud_rate = BAUDRATE;
			uart_param_config(UART_NUM, &uart_config);

			vTaskDelay(100 / portTICK_PERIOD_MS);
			reset_decoder_state();

			if (ublox_cfg_rate(ubx_rate, 1, 0) != -1) {
				baud_ok = true;
				break;
			}

			vTaskDelay(100 / portTICK_PERIOD_MS);
			reset_decoder_state();

			if (ublox_cfg_rate(ubx_rate, 1, 0) != -1) {
				baud_ok = true;
				break;
			}
		} else {
			baud_ok = true;
			break;
		}

		vTaskDelay(500 / portTICK_PERIOD_MS);
	}

	if (!baud_ok) {
		if (print) {
			commands_printf("Could not set baud rate");
		}
		return false;
	}

	ublox_cfg_prt_uart(&uart);
	ublox_cfg_rate(ubx_rate, 1, 0);

	// Dynamic model
	ubx_cfg_nav5 nav5;
	memset(&nav5, 0, sizeof(ubx_cfg_nav5));
	nav5.apply_dyn = true;
	nav5.dyn_model = 4;
	ublox_cfg_nav5(&nav5);

	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_SOL, 0);
	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_RELPOSNED, 0);
	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_SVIN, 0);
	ublox_cfg_msg(UBX_CLASS_NAV, UBX_NAV_SAT, 0);

	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GGA, 1);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GSV, 1);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_RMC, 1);

	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GLL, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GSA, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_VTG, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GRS, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GST, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_ZDA, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_GBS, 0);
	ublox_cfg_msg(UBX_CLASS_NMEA, UBX_NMEA_DTM, 0);

	ubx_cfg_nmea nmea;
	memset(&nmea, 0, sizeof(ubx_cfg_nmea));
	nmea.nmeaVersion = 0x41;
	nmea.numSv = 0;
//	nmea.highPrec = true;

	ublox_cfg_nmea(&nmea);

#if UBLOX_IS_F9P
	unsigned char buffer[80];
	int ind = 0;
	ublox_cfg_append_enable_gps(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_gal(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_bds(buffer, &ind, true, true, true);
	ublox_cfg_append_enable_glo(buffer, &ind, true, true, true);
	ublox_cfg_valset(buffer, ind, true, true, true);
#else
	ubx_cfg_gnss gnss;
	memset(&gnss, 0, sizeof(ubx_cfg_gnss));
	gnss.num_ch_hw = 32;
	gnss.num_ch_use = 0xFF;
	gnss.num_blocks = 4;

	gnss.blocks[0].gnss_id = UBX_GNSS_ID_GPS;
	gnss.blocks[0].en = true;
	gnss.blocks[0].minTrkCh = 6;
	gnss.blocks[0].maxTrkCh = 16;
	gnss.blocks[0].flags = UBX_CFG_GNSS_GPS_L1C;

	gnss.blocks[1].gnss_id = UBX_GNSS_ID_SBAS;
	gnss.blocks[1].en = true;
	gnss.blocks[1].minTrkCh = 0;
	gnss.blocks[1].maxTrkCh = 3;
	gnss.blocks[1].flags = UBX_CFG_GNSS_SBAS_L1C;

	gnss.blocks[2].gnss_id = UBX_GNSS_ID_GLONASS;
	gnss.blocks[2].en = true;
	gnss.blocks[2].minTrkCh = 6;
	gnss.blocks[2].maxTrkCh = 16;
	gnss.blocks[2].flags = UBX_CFG_GNSS_GLO_L1;

	gnss.blocks[3].gnss_id = UBX_GNSS_ID_BEIDOU;
	gnss.blocks[3].en = false;
	gnss.blocks[3].minTrkCh = 6;
	gnss.blocks[3].maxTrkCh = 16;
	gnss.blocks[3].flags = UBX_CFG_GNSS_BDS_B1L;

	ublox_cfg_gnss(&gnss);
#endif

	terminal_register_command_callback(
			"ubx_poll",
			"Poll one of the ubx protocol messages. Supported messages:\n"
			"  UBX_NAV_SOL - Position solution\n"
			"  UBX_NAV_RELPOSNED - Relative position to base in NED frame\n"
			"  UBX_NAV_SVIN - survey-in data\n"
			"  UBX_RXM_RAWX - raw data\n"
			"  UBX_NAV_SAT - satellite information\n"
			"  UBX_MON_VER - Ublox version information\n"
			"  UBX_CFG_GNSS - Print supported GNSS configuration",
			"[msg]",
			ubx_terminal_cmd_poll);

	return true;
}

void ublox_send(unsigned char *data, unsigned int len) {
	// Wait for the previous transmission to finish.
	uart_wait_tx_done(UART_NUM, 1000 / portTICK_PERIOD_MS);
	uart_write_bytes(UART_NUM, data, len);
}

static int wait_ack_nak(int timeout_ms) {
	uint32_t to;

	if (timeout_ms >= 0) {
		to = timeout_ms;
	} else {
		to = portMAX_DELAY;
	}

	bool ret = xSemaphoreTake(wait_sem, to / portTICK_PERIOD_MS) == pdTRUE;

	if (ret && wait_was_ack) {
		return 0;
	} else if (ret && !wait_was_ack) {
		return 1;
	} else {
		return -1;
	}
}

static void ubx_decode_ack(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	wait_was_ack = true;
	xSemaphoreGive(wait_sem);
}

static void ubx_decode_nak(uint8_t *msg, int len) {
	(void)len;

	int ind = 0;

	uint8_t cls_id = ubx_get_I1(msg, &ind);
	uint8_t msg_id = ubx_get_I1(msg, &ind);

	// TODO: Use these
	(void)cls_id;
	(void)msg_id;

	wait_was_ack = false;
	xSemaphoreGive(wait_sem);
}
